Мелкие исправления, подготовка к интеграции с DaData

--- a/com_jshopping_addon_courierexe/sm_courierexe/forms/shippingprice.xml
+++ b/com_jshopping_addon_courierexe/sm_courierexe/forms/shippingprice.xml
@@ -94,6 +94,7 @@
                 <option value="1">JYES</option>
                 <option value="0">JNO</option>
             </field>
+            <field type="spacer" hr="true"/>
         </fieldset>
     </fields>
 </form>
