--- a/com_jshopping_addon_courierexe/media/css/admin-style.css
+++ b/com_jshopping_addon_courierexe/media/css/admin-style.css
@@ -1,3 +1,13 @@
+/**
+ * @package    JShopping - Courierexe shipping
+ * @version    1.0.0-rc
+ * @author     Artem Vasilev - webmasterskaya.xyz
+ * @copyright  Copyright (c) 2020 Webmasterskaya. All rights reserved.
+ * @license    GNU General Public License version 3 or later; see LICENSE.txt
+ * @link       https://webmasterskaya.xyz/
+ * @since      1.0.0
+ */
+
 .autocomplete-suggestions {
     border: 1px solid #999;
     background: #FFF;
